# motoridecallconnect

./: .firebaserc  .gitignore  README.md  agents.md  build.gradle.kts  download_model.sh  firestore.rules  settings.gradle.kts
app/: build.gradle.kts  google-services.json
app/src/androidTest/java/dev/wads/motoridecallconnect/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/dev/wads/motoridecallconnect/: MainActivity.kt  MotoRideApplication.kt  StorageManagementActivity.kt
app/src/main/java/dev/wads/motoridecallconnect/audio/: AudioCapturer.kt
app/src/main/java/dev/wads/motoridecallconnect/data/local/: AppDatabase.kt  Converters.kt  TripDao.kt  UserPreferences.kt
app/src/main/java/dev/wads/motoridecallconnect/data/model/: ConnectionTransportMode.kt  Device.kt  Friend.kt  InternetPeerDetails.kt  SocialModels.kt  TranscriptEntry.kt  TranscriptLine.kt  Trip.kt  WifiDirectState.kt
app/src/main/java/dev/wads/motoridecallconnect/data/remote/: FirestorePaths.kt
app/src/main/java/dev/wads/motoridecallconnect/data/repository/: DeviceDiscoveryRepository.kt  InternetConnectivityRepository.kt  SocialRepository.kt  TripRepository.kt  UserRepository.kt  WifiDirectRepository.kt
app/src/main/java/dev/wads/motoridecallconnect/service/: AudioService.kt
app/src/main/java/dev/wads/motoridecallconnect/stt/: NativeSpeechLanguageCatalog.kt  SpeechRecognizerHelper.kt  SttEngine.kt  WhisperEngine.kt  WhisperKitWrapper.kt  WhisperLib.kt  WhisperModelCatalog.kt
app/src/main/java/dev/wads/motoridecallconnect/stt/queue/: FileBackedTranscriptionChunkQueue.kt  TranscriptionChunkQueue.kt
app/src/main/java/dev/wads/motoridecallconnect/transport/: FirestoreSignalingClient.kt  NsdHelper.kt  SignalingClient.kt  WebRtcClient.kt
app/src/main/java/dev/wads/motoridecallconnect/ui/activetrip/: ActiveTripScreen.kt  ActiveTripViewModel.kt
app/src/main/java/dev/wads/motoridecallconnect/ui/common/: ViewModelFactory.kt
app/src/main/java/dev/wads/motoridecallconnect/ui/components/: AudioTestModal.kt  BigButton.kt  ChronometerView.kt  EmptyState.kt  FullTranscriptCard.kt  StatusBadge.kt  StatusCard.kt  TranscriptFeed.kt  TripTranscriptPanel.kt  UserComponent.kt
app/src/main/java/dev/wads/motoridecallconnect/ui/friends/: FriendProfileScreen.kt  FriendsScreen.kt
app/src/main/java/dev/wads/motoridecallconnect/ui/history/: TripDetailScreen.kt  TripDetailViewModel.kt  TripHistoryScreen.kt  TripHistoryViewModel.kt
app/src/main/java/dev/wads/motoridecallconnect/ui/login/: LoginScreen.kt  LoginViewModel.kt
app/src/main/java/dev/wads/motoridecallconnect/ui/navigation/: AppNavigation.kt  Screen.kt
app/src/main/java/dev/wads/motoridecallconnect/ui/onboarding/: OnboardingScreen.kt
app/src/main/java/dev/wads/motoridecallconnect/ui/pairing/: PairingScreen.kt  PairingViewModel.kt  QrCodeScanner.kt
app/src/main/java/dev/wads/motoridecallconnect/ui/settings/: SettingsScreen.kt  SettingsViewModel.kt
app/src/main/java/dev/wads/motoridecallconnect/ui/social/: SocialScreens.kt  SocialViewModel.kt
app/src/main/java/dev/wads/motoridecallconnect/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/java/dev/wads/motoridecallconnect/utils/: NetworkUtils.kt  QrCodeUtils.kt
app/src/main/java/dev/wads/motoridecallconnect/vad/: SimpleVad.kt
app/src/main/res/drawable/: ic_notification.xml
app/src/main/res/values/: integers.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/values-pt-rBR/: strings.xml
app/src/test/java/dev/wads/motoridecallconnect/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
scripts/: start-logcat.sh
